--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
+
+:root {
+  --color-bg-container: #fdfffd;
+  --color-bg: #fdf8ef;
+  --color-grey: #5f5f5f;
+  --color-text: #353535;
+  --color-text-dark: #fff;
+  --color-accent: #f06c00;
+  --color-white: #fff;
+  --color-scrollbar: #a7a7a7;
+  --color-bg-gradient:none;
+  --color-input:#fdf8ef;
+}
+
+html.dark {
+  --color-bg: #2a2a49;
+  --color-bg-gradient: linear-gradient(0deg,rgba(42, 42, 73, 1) 0%,rgba(8, 9, 22, 1) 99%);
+  --color-bg-container:#292d41;
+  --color-text: #fff;
+  --color-grey: #c0c0c0;  
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +28,66 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  accent-color: var(--color-accent);
+  background: var(--color-bg-gradient);
+  background-color: var(--color-bg);
+
+}
+
+.box {
+  width: 100%;
+  height: 70vh;
+  max-width: 500px;
+  background-color: var(--color-bg-container);
+  overflow: hidden;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  padding: 0.7rem;
+  box-shadow: 14px 12px 12px -7px rgba(0, 0, 0, 0.71);
+  -webkit-box-shadow: 14px 12px 12px -7px rgba(0, 0, 0, 0.71);
+  -moz-box-shadow: 14px 12px 12px -7px rgba(0, 0, 0, 0.71);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: "Noto Sans KR", sans-serif;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+button {
+  outline: none;
+  border: none;
+}
+
+::-webkit-scrollbar {
+  width: 0.4rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--color-bg);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-scrollbar);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-accent);
 }
