--- a/src/index.css
+++ b/src/index.css
@@ -44,9 +44,10 @@ body {
 }
 
 .box {
-  width: 100%;
-  height: 70vh;
+  width: 100vw;
+  height: 100vh;
   max-width: 500px;
+  max-height: 800px;
   background-color: var(--color-bg-container);
   overflow: hidden;
   border-radius: 1rem;
@@ -94,5 +95,3 @@ button {
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--color-accent);
 }
-
-
