--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,7 +7,7 @@
   padding: 0 0.5rem;
 }
 
-.toggle{
+.toggle {
   background-color: transparent;
   color: var(--color-text);
   font-size: 1.5rem;
@@ -15,7 +15,7 @@
   transition: all 150ms ease-out;
 }
 
-.toggle:hover{
+.toggle:hover {
   transform: translateY(-5px);
   color: var(--color-accent);
 }
@@ -40,9 +40,20 @@
   opacity: 1;
 }
 
-.filter.selected::after{
+.filter.selected::after {
   content: '';
   display: block;
   margin-top: 0.2rem;
   border: 1px solid var(--color-text);
+}
+@media (min-width: 391px) {
+  .filter {
+    font-size: 1.4rem;
+  }
+}
+
+@media (max-width: 390px) {
+  .filter {
+    font-size: 1rem;
+  }
 }
