--- a/src/index.css
+++ b/src/index.css
@@ -41,11 +41,12 @@ body {
   accent-color: var(--color-accent);
   background: var(--color-bg-gradient);
   background-color: var(--color-bg);
+  overflow: hidden;
 }
 
 .box {
   width: 100vw;
-  height: 100vh;
+  height: 90vh;
   max-width: 500px;
   max-height: 800px;
   background-color: var(--color-bg-container);
